@@ -10,10 +10,11 @@ WriteMakefile(
     LICENSE => 'gpl',
     EXE_FILES => [ 'script/simple-EA.pl',  'script/maxones.pl'],
     PREREQ_PM => {
-        'Test::More' => 0,
-	'Carp' => 0,
-	'Exporter' => 0,
-	'Sort::Key::Top' => 0
+		  'Test::More' => 0,
+		  'Test::Exception' => 0,
+		  'Carp' => 0,
+		  'Exporter' => 0,
+		  'Sort::Key::Top' => 0,
     },
     dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean               => { FILES => 'Algorithm-Evolutionary-Simple-*' },
